Resolved responsive issues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>Birthday</title>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
 body {
@@ -16,8 +15,9 @@ body {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
+  max-width: 1000px;
   position: relative;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,12 +85,12 @@ body {
    
 <div class="mySlides fade">
   <img src="2.JPG" style="width:50vw ; height:70vh">
-  <div class="text">The way you have always cared for us sacrificing your own happiness...</div>
+  <div class="text">The way you have always cared for us sacrificing<br/>your own happiness...</div>
 </div>
 
 <div class="mySlides fade">
   <img src="3.JPG" style="width:50vw ; height:70vh">
-  <div class="text">Always binding us together with your unconditional love...</div>
+  <div class="text">Always binding us together with your<br/>unconditional love...</div>
 </div>
 
 <div class="mySlides fade">
@@ -100,7 +100,7 @@ body {
 
 <div class="mySlides fade">
   <img src="5.jpg" style="width:50vw ; height:70vh">
-  <div class="text">Your innocent smile has shown me how beautiful the world is...</div>
+  <div class="text">Your innocent smile has shown me<br/>how beautiful the world is...</div>
 </div>
 
 <div class="mySlides fade">
