Improved responsiveness and added icons

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="favicon.ico">
   <title>Birthday</title>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 
 body {
@@ -83,7 +85,7 @@ body {
 </head>
 <body>
 <div class="top" style="text-align: center;color: mediumblue">
-<h2>Happy Birthday Mummy <3</h2>
+<h2><i class="fa fa-heart-o" style="color:red"></i> Happy Birthday Mummy <i class="fa fa-heart-o" style="color:red"></i></h2>
 <p>Wish you lots of happiness and love</p>
 </div>
 <div class="slideshow-container">
